--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="We propose a hierarchical neural trajectory planner, which exhibits superior adaptability in long-tail scenarios and showcases flexibility to integrate manually defined rule sets adapting to different driving styles.">
   <meta name="keywords" content="Dreamitate, Visuomotor Policy Learning via Video Generation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AFTPLongTail</title>
+  <title>HiTail</title>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LXYT8JKE1N"></script>
@@ -41,7 +41,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-2"> &nbsp; Hierarchical Neural Planner for Adaptive and Flexible Trajectory Planning in Long-Tail Scenarios &nbsp;
+          <h1 class="title is-2"> &nbsp; HiTail: Hierarchical Neural Planner for Adaptive and Flexible Long-Tail Trajectory Planning &nbsp;
           </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
@@ -104,7 +104,7 @@
     <!-- Paper video. -->
       <div class="column is-full">
         <video id="paperbot-summary" controls playsinline style="width: 100%; height: auto;">
-          <source src="./assets/videos/video.mp4" type="video/mp4">
+          <source src="./assets/videos/HiTail.mp4" type="video/mp4">
         </video>
       </div>
     <!--/ Paper video. -->
