--- a/index.html
+++ b/index.html
@@ -45,18 +45,45 @@
           </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://shenghongzhang.github.io/">Shenghong Zhang</a><sup>*1</sup>,</span>
+              <a href="https://shenghongzhang.github.io/">Shenghong Zhang</a>&nbsp;&nbsp;</span>
             <span class="author-block">
-              <a href="https://github.com/xiangyuzhouME">Xiangyu Zhou</a><sup>*1</sup>,</span>
+              <a href="https://xiangyuzhou.github.io/">Xiangyu Zhou</a>&nbsp;&nbsp;</span>
             <span class="author-block">
-              <a href="https://xli4217.github.io/">Xiao Li</a><sup>1</sup>,
+              <a href="https://me.sjtu.edu.cn/teacher_directory1/lixiao.html">Xiao Li</a>
             </span>
           </div>
-
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Shanghai Jiao Tong University,</span>
+            <span class="author-block">Shanghai Jiao Tong University</span>
           </div>
-
+          <div class="columns is-centered">
+            <div class="column is-four-fifths is-centered has-text-centered">
+              <figure>
+                  <img src="./assets/figures/school_icon.png" alt="figure1" style="width: 40%;">
+              </figure>
+            </div>
+          </div>
+          <div class="is-size-4 publication-authors">
+              IROS 2025
+          </div>
+          <div class="column has-text-centered">
+              <div class="publication-links">
+                <span class="link-block">
+                  <a href="./assets/hitail.pdf" class="external-link button is-normal is-rounded is-dark" target="_blank">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Paper</span>
+                  </a>
+                </span>
+                  <span class="link-block">
+                    <a href="https://github.com/IUNONE/hitail_planner" class="external-link button is-normal is-rounded is-dark" target="_blank">
+                      <span class="icon">
+                        <i class="fab fa-github"></i>
+                      </span>
+                      <span>Code</span>
+                    </a>
+                  </span>
+              </div>
           </div>
         </div>
       </div>
@@ -319,19 +346,31 @@
 </section>
 
 <!-- Acknowledgements. -->
-<!-- <section class="section" id="BibTeX">
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@misc{liang2024dreamitate,
-  title={Dreamitate: Real-World Visuomotor Policy Learning via Video Generation}, 
-  author={Junbang Liang and Ruoshi Liu and Ege Ozguroglu and Sruthi Sudhakar and Achal Dave and Pavel Tokmakov and Shuran Song and Carl Vondrick},
-  year={2024},
-  eprint={2406.16862},
-  archivePrefix={arXiv},
-  primaryClass={id='cs.RO' full_name='Robotics' is_active=True alt_name=None in_archive='cs' is_general=False description='Roughly includes material in ACM Subject Class I.2.9.'}
-}</code></pre>
+      <pre><code>@INPROCEEDINGS{???,
+        author={Zhang, Shenghong and Zhou, Xiangyu and Xiao, Li},
+        booktitle={2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
+        title={HiTail: Hierarchical Neural Planner for Adaptive and Flexible Long-Tail Trajectory Planning }, 
+        year={2025},
+        volume={},
+        number={},
+        pages={??-??},
+        keywords={Autonomous Driving, Trajectory Planning},
+        doi={???}
+      }
+      </code></pre>
   </div>
-</section> -->
+</section> 
+
+<footer class="footer">
+    <div class="container">
+        <div class="content has-text-centered">
+            <p>Page template borrowed from <a href="https://nerfies.github.io/"><span class="dnerf">Nerfies</span></a>.</p>
+        </div>
+    </div>
+</footer>
 
 </body>
 </html>
