--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-2"> &nbsp; HiTail: Hierarchical Neural Planner for Adaptive and Flexible Long-Tail Trajectory Planning &nbsp;
+          <h1 class="title is-2"> &nbsp; <span style="color: blue;">HiTail</span>: Hierarchical Neural Planner for Adaptive and Flexible Long-Tail Trajectory Planning &nbsp;
           </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
@@ -62,7 +62,7 @@
               </figure>
             </div>
           </div>
-          <div class="is-size-4 publication-authors">
+          <div class="is-size-4 publication-authors" style="color: red;">
               IROS 2025
           </div>
           <div class="column has-text-centered">
